--- a/.github/workflows/ping-azure-app.yml
+++ b/.github/workflows/ping-azure-app.yml
@@ -1,7 +1,7 @@
 name: Ping Azure App
 on:
   schedule:
-    - cron: '0/15 * * * *'
+    - cron: '0/19 7-15 * * 1-5'
 jobs:
   ping_app:
     runs-on: ubuntu-latest
