--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   deploy:
     runs-on: windows-latest
+    environment:
+      name: 'API_PRODUCTION'
     permissions:
       id-token: write
       contents: read
