add editorconfig and enforce codestyle for all project builds

--- a/CogLog.App.UnitTests/CogLog.App.UnitTests.csproj
+++ b/CogLog.App.UnitTests/CogLog.App.UnitTests.csproj
@@ -8,6 +8,8 @@
         <IsPackable>false</IsPackable>
         <IsTestProject>true</IsTestProject>
         <RootNamespace>CogLog.Core.Tests</RootNamespace>
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+
     </PropertyGroup>
 
     <ItemGroup>
