--- a/CogLog.ClientGenerator/CogLog.ClientGenerator.csproj
+++ b/CogLog.ClientGenerator/CogLog.ClientGenerator.csproj
@@ -5,6 +5,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     </PropertyGroup>
 
     <ItemGroup>
