--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "db:app:update": "dotnet ef database update $npm_package_config_APP_EF_ARGS",
     "mig:app:add": "dotnet ef migrations add $npm_package_config_APP_EF_ARGS",
     "mig:app:remove": "dotnet ef migrations remove $npm_package_config_APP_EF_ARGS",
-    "client:generate": "dotnet run --project CogLog.ClientGenerator/CogLog.ClientGenerator.csproj"
+    "client:generate": "dotnet run --project CogLog.ClientGenerator/CogLog.ClientGenerator.csproj",
+    "api:dev": "dotnet run --project CogLog.API/CogLog.API.csproj --launch-profile https"
+    
   },
-  "author": "Adam Navarro"
+  "author": "Adam Navarro",
+  "packageManager": "pnpm@9.1.4+sha512.9df9cf27c91715646c7d675d1c9c8e41f6fce88246f1318c1aa6a1ed1aeb3c4f032fcdf4ba63cc69c4fe6d634279176b5358727d8f2cc1e65b65f43ce2f8bfb0"
 }
