--- a/CogLog.App/CogLog.App.csproj
+++ b/CogLog.App/CogLog.App.csproj
@@ -19,6 +19,7 @@
 
     <ItemGroup>
       <Folder Include="Features\Subject\Queries\" />
+      <Folder Include="Features\Topic\Queries\" />
     </ItemGroup>
 
 </Project>
