begin UI project renaming and refactor

--- a/CogLog.UI/CogLog.UI.csproj
+++ b/CogLog.UI/CogLog.UI.csproj
@@ -15,5 +15,11 @@
 
     </ItemGroup>
     
+    <ItemGroup>
+      <Folder Include="Models\Category\" />
+      <Folder Include="Models\Subject\" />
+      <Folder Include="Models\Tag\" />
+    </ItemGroup>
+    
 
 </Project>
