add remaining entity service contract interfaces

--- a/CogLog.UI/CogLog.UI.csproj
+++ b/CogLog.UI/CogLog.UI.csproj
@@ -15,5 +15,11 @@
 
     </ItemGroup>
     
+    <ItemGroup>
+      <Folder Include="Views\Categories\" />
+      <Folder Include="Views\Subjects\" />
+      <Folder Include="Views\Tags\" />
+    </ItemGroup>
+    
 
 </Project>
