--- a/CogLog.UI/CogLog.UI.csproj
+++ b/CogLog.UI/CogLog.UI.csproj
@@ -19,5 +19,11 @@
       <Folder Include="Views\Tags\" />
     </ItemGroup>
     
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Views\Shared\Hierarchy\_SubjectSelectPartial.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Shared\Components\BlockClassificationSelector\Default.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Blocks\Create\Classify.cshtml" />
+    </ItemGroup>
+    
 
 </Project>
