remove unused classes and records

--- a/CogLog.App/CogLog.App.csproj
+++ b/CogLog.App/CogLog.App.csproj
@@ -18,6 +18,7 @@
 
     <ItemGroup>
       <Folder Include="Contracts\Data\Shared\Pagination\" />
+      <Folder Include="Features\Shared\" />
     </ItemGroup>
 
 </Project>
