--- a/CogLog.UI/CogLog.UI.csproj
+++ b/CogLog.UI/CogLog.UI.csproj
@@ -9,7 +9,6 @@
     </PropertyGroup>
     
     <ItemGroup>
-        <PackageReference Include="automapper" Version="13.0.1" />
         <PackageReference Include="LocalStorage" Version="2.1.0" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
 
@@ -19,6 +18,7 @@
       <_ContentIncludedByDefault Remove="Views\Shared\Hierarchy\_SubjectSelectPartial.cshtml" />
       <_ContentIncludedByDefault Remove="Views\Shared\Components\BlockClassificationSelector\Default.cshtml" />
       <_ContentIncludedByDefault Remove="Views\Blocks\Create\Classify.cshtml" />
+      <_ContentIncludedByDefault Remove="Views\Shared\Components\BlockClassificationCircle\Default.cshtml" />
     </ItemGroup>
     
     <ItemGroup>
