--- a/CogLog.UI/CogLog.UI.csproj
+++ b/CogLog.UI/CogLog.UI.csproj
@@ -10,6 +10,7 @@
     
     <ItemGroup>
         <PackageReference Include="LocalStorage" Version="2.1.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.11" />
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
 
     </ItemGroup>
