--- a/Vonavulary.UI/Properties/launchSettings.json
+++ b/Vonavulary.UI/Properties/launchSettings.json
@@ -22,7 +22,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7057;http://localhost:5247",
+      "applicationUrl": "https://localhost:7057",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
