--- a/Vonavulary.UI/appsettings.Development.json
+++ b/Vonavulary.UI/appsettings.Development.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost; Database=CogLog-dev; User Id=sa; Password=MyPass@word;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=vonavulary_db_dev;"
   },
   "JwtSettings": {
     "Key": "9a5a520a-2446-4156-9c11-f2931e63d8df",
