--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Vonavulary",
+  "name": "vonavulary",
   "version": "1.0.0",
   "description": "A collection of words.",
   "config": {
